Additions to agm 2018 agenda

--- a/agm/agm2018.md
+++ b/agm/agm2018.md
@@ -12,6 +12,8 @@ layout: default
 
 * [OSGeo:UK AGM 2017 Minutes](./agm2017minutes.html){:target="_newpage"}
 * ...
+* Accounts review
+* Appointment of officers
 * Any other business	
 * Date of next AGM
 
