--- a/agm/agm2018.md
+++ b/agm/agm2018.md
@@ -12,7 +12,7 @@ layout: default
 
 * [OSGeo:UK AGM 2017 Minutes](./agm2017minutes.html){:target="_newpage"}
 * ...
-* Accounts review
+* Accounts review Draft 2017-8 accounts (../files/OSGeo-UK DRAFT Accounts - Accounts 2017-18.pdf){:target="_newpage"}
 * Appointment of officers
 * Any other business	
 * Date of next AGM
