Added google hangout link for AGM

--- a/agm/agm2018.md
+++ b/agm/agm2018.md
@@ -6,12 +6,14 @@ layout: default
 
 **12.00PM (BST) Wednesday 12th September 2018**
 
-**Google Hangout Link to be provided nearer the time**
+**[Google Hangout Link](https://meet.google.com/ukn-qewd-fmk) valid from 12pm**
 
 ### Agenda
 
 * [OSGeo:UK AGM 2017 Minutes](./agm2017minutes.html){:target="_newpage"}
-* ...
+* Report on activities
+    - FOSS4GUK 2018
+    - Future events
 * Accounts review 
 [Draft 2017-8 accounts](../files/OSGeo-UK_DRAFT_Accounts_2017-18.pdf){:target="_newpage"}
 * Appointment of officers
