Link to minutes

--- a/agm/agm2020.md
+++ b/agm/agm2020.md
@@ -9,7 +9,7 @@ layout: default
 ### Agenda
 
 * Apologies for absence
-* Minutes of previous meeting
+* [Minutes of previous meeting](./agm2019minutes.html){:target="_newpage"}
 * Accounts 2019-2020
 * Past and future events
 * Election of officers
