--- a/agm/agm2021.md
+++ b/agm/agm2021.md
@@ -6,6 +6,8 @@ layout: default
 
 **Wednesday 27th October at 12:00 (BST)**
 
+**Link to meeting will be posted here and sent to UK list on the morning of Wednesday 27th October**
+
 ### Agenda
 
 * Apologies for absence
