--- a/agm/agm2021.md
+++ b/agm/agm2021.md
@@ -6,7 +6,10 @@ layout: default
 
 **Wednesday 27th October at 12:00 (BST)**
 
-**Link to meeting will be posted here and sent to UK list on the morning of Wednesday 27th October**
+Google Meet joining info
+[Video call link: ](https://meet.google.com/hjk-rojh-pyb){:target="_newpage"}
+Or dial: ‪(GB) +44 20 3957 2842‬ PIN: ‪839 936 797‬#
+More phone numbers: https://tel.meet/hjk-rojh-pyb?pin=3075308108288
 
 ### Agenda
 
