Update AGM to add Zoom

--- a/agm/agm2022.md
+++ b/agm/agm2022.md
@@ -6,7 +6,7 @@ layout: default
 
 **Tuesday 11th October at 12:00 (BST, UK/London)** 
 
-*Link to follow*
+*Online using Zoom, Link to follow*
 
 ### Agenda
 
