Add link to funding email

--- a/agm/agm2022.md
+++ b/agm/agm2022.md
@@ -15,7 +15,7 @@ layout: default
 * Accounts 2021-2022
 * Future events - including [FOSS4G:UK Local 2022](https://uk.osgeo.org/foss4guk2022local/){:target="_newpage"}
 * Election of officers
-* Funding of Open Source Geo Projects
+* [Funding of Open Source Geo Projects](https://lists.osgeo.org/pipermail/uk/2022-September/001152.html){:target="_newpage"}
 * Any other business
 * Date of next AGM
 
