Add link to funding document

--- a/agm/agm2022.md
+++ b/agm/agm2022.md
@@ -15,7 +15,9 @@ layout: default
 * Accounts 2021-2022
 * Future events - including [FOSS4G:UK Local 2022](https://uk.osgeo.org/foss4guk2022local/){:target="_newpage"}
 * Election of officers
-* [Funding of Open Source Geo Projects](https://lists.osgeo.org/pipermail/uk/2022-September/001152.html){:target="_newpage"}
+* Funding of Open Source Geo Projects
+    - [Initial email to mailng list](https://lists.osgeo.org/pipermail/uk/2022-September/001152.html){:target="_newpage"}
+    - [Document listing proposed projects](https://docs.google.com/document/d/1cHdzrLIAEsp73neJiXGagaz_zeh4GAiH6gVgMZIwPQw/edit?usp=sharing)
 * Any other business
 * Date of next AGM
 
