--- a/agm/agm2022.md
+++ b/agm/agm2022.md
@@ -17,7 +17,7 @@ layout: default
 * Election of officers
 * Funding of Open Source Geo Projects
     - [Initial email to mailng list](https://lists.osgeo.org/pipermail/uk/2022-September/001152.html){:target="_newpage"}
-    - [Document listing proposed projects](https://docs.google.com/document/d/1cHdzrLIAEsp73neJiXGagaz_zeh4GAiH6gVgMZIwPQw/edit?usp=sharing)
+    - [Document listing proposed projects](https://docs.google.com/document/d/1cHdzrLIAEsp73neJiXGagaz_zeh4GAiH6gVgMZIwPQw/edit?usp=sharing){:target="_newpage"}
 * Any other business
 * Date of next AGM
 
